--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<a href="parliament.html" class="ui-btn ui-mini">Member of Parliament</a>
 				<a href="foreign.html" class="ui-btn ui-mini">Foreign Tour</a>
 				<a href="photos.html" class="ui-btn ui-mini">Photography</a>
-				
+				<a href="join.html" class="ui-btn ui-mini">Appointment</a>
 				<a href="contact.html" class="ui-btn ui-mini">Contact</a>
 				
 			</div>
